examples/test/testpolicy5792.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5792
  namespace: namespace19
spec:
  podSelector:
    matchLabels:
      key27: value33
      key12: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value24
      podSelector:
        matchLabels:
          key18: value5
          key44: value28
